testdata/baselines/reference/submodule/compiler/exportDefaultWithJSDoc1.errors.txt
a.js(6,12): error TS2304: Cannot find name 'NumberLike'.


==== a.js (1 errors) ====
    /**
     * A number, or a string containing a number.
     * @typedef {(number|string)} NumberLike
     */
    
    /** @type {NumberLike[]} */export default ([ ]);
               ~~~~~~~~~~
!!! error TS2304: Cannot find name 'NumberLike'.
    
==== b.ts (0 errors) ====
    import A from './a'
    A[0]